# varity

./: CONTRIBUTING.md  Github_Readme.md  PROMPT.md  README.md  claude.md  pyproject.toml  roadmap.md
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
benchmarks/: analyze.py  benchmark.py  dataset.py  linkedin_post.md
benchmarks/.claude/: settings.local.json
demo/: app.py
docs/: CONCEPTS.docx  CONCEPTS.md  index.html  md_to_docx.py  medium_post.md  varity_whitepaper.tex
tests/: test_providers.py  test_strategies.py
varity/: __init__.py  checker.py  cli.py  models.py
varity/strategies/: confidence.py
