[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varity"
version = "0.1.1"
description = "Recursive self-checking for LLM hallucination reduction via Verdict Stability Score (VSS)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "hallucination", "fact-checking", "ai-safety", "nlp", "verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "tiktoken>=0.5",
]

[project.urls]
Homepage = "https://charchitd.github.io/Varity-v0.1/"
Documentation = "https://charchitd.github.io/Varity-v0.1/"
Repository = "https://github.com/charchitd/Varity-v0.1"
"Bug Tracker" = "https://github.com/charchitd/Varity-v0.1/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "build>=0.10",
    "twine>=4.0",
]

[project.scripts]
varity = "varity.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["varity*"]

[tool.setuptools.package-data]
varity = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
